SERVER-44484 Allow change stream update lookup to retrieve post-image by _id

create mode 100644 jstests/sharding/change_streams_unsharded_update_resume.js