jstests/sharding/change_streams_update_lookup_shard_metadata_missing.js
@@ -31,7 +31,7 @@ st.ensurePrimaryShard(mongosDB.getName(), shard0.getURL());
 st.shardColl(mongosColl, {a: 1}, {a: 0}, {a: 1});
 
 // Open a change stream on the collection.
-const csCursor = mongosColl.watch();
+let csCursor = mongosColl.watch();
 
 // Write one document onto shard0 and obtain its resume token.
 assert.commandWorked(mongosColl.insert({_id: 0, a: -100}));
@@ -39,14 +39,14 @@ assert.soon(() => csCursor.hasNext());
 
 const resumeToken = csCursor.next()._id;
 
-// get any secondary
+// Obtain a reference to any secondary.
 const newPrimary = st.rs0.getSecondary();
-let shards = st.s.getDB('config').shards.find().toArray();
 
 // Step up one of the Secondaries, which will not have any sharding metadata loaded.
 st.rs0.stepUpNoAwaitReplication(newPrimary);
 
-// make sure the mongos refreshes it's connections to the shard
+// Make sure the mongos refreshes its connections to the shard.
+let shards = st.s.getDB('config').shards.find().toArray();
 let primary = {};
 do {
     let connPoolStats = st.s0.adminCommand({connPoolStats: 1});
@@ -62,17 +62,19 @@ do {
 assert.soonNoExcept(
     () => assert.commandWorked(mongosColl.update({_id: 0}, {$set: {updated: true}}, false, true)));
 
-// Resume the change stream with {fullDocument: 'updateLookup'}.
-const cmdRes = assert.commandWorked(mongosColl.runCommand("aggregate", {
-    pipeline: [{$changeStream: {resumeAfter: resumeToken, fullDocument: "updateLookup"}}],
-    cursor: {}
-}));
-
+// Resume the change stream with {fullDocument: 'updateLookup'}. Update lookup can successfully
+// identify the document based on its _id alone so long as the _id is unique in the collection, so
+// this alone does not prove that the multi-update actually wrote its shard key into the oplog.
+csCursor = mongosColl.watch([], {resumeAfter: resumeToken, fullDocument: "updateLookup"});
 assert.soon(() => csCursor.hasNext());
+assert.docEq(csCursor.next().fullDocument, {_id: 0, a: -100, updated: true});
 
-const updateObj = csCursor.next();
-
-assert.eq(true, updateObj.updateDescription.updatedFields.updated);
+// Now insert a new document with the same _id on the other shard. Update lookup will be able to
+// distinguish between the two, proving that they both have full shard keys available.
+assert.commandWorked(mongosColl.insert({_id: 0, a: 100}));
+csCursor = mongosColl.watch([], {resumeAfter: resumeToken, fullDocument: "updateLookup"});
+assert.soon(() => csCursor.hasNext());
+assert.docEq(csCursor.next().fullDocument, {_id: 0, a: -100, updated: true});
 
 st.stop();
 })();
